endpoint  busqueda por documento
